[gd_scene load_steps=3 format=3 uid="uid://e1h6c0vjcquv"]

[ext_resource type="Script" path="res://assets/global/main.gd" id="1_a2gs7"]
[ext_resource type="PackedScene" uid="uid://b4b0wyorar4vw" path="res://scenes/UI/UIController.tscn" id="2_t00du"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a2gs7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SceneView" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SceneView"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="CurrentView" type="ColorRect" parent="VBoxContainer/SceneView/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="UiController" parent="." instance=ExtResource("2_t00du")]

[node name="MenuPanel" type="PanelContainer" parent="."]
visible = false
z_index = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="MenuContainer" type="MarginContainer" parent="MenuPanel/VBoxContainer"]
layout_mode = 2